--- a/homework/package.json
+++ b/homework/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "crypto-js": "^4.0.0",
     "md5": "^2.2.1",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
